# feed-bot

./: .env  .gitignore  Cargo.toml  README.md  feed.db-shm  feed.db-wal
src/: db.rs  main.rs  structures.rs
src/commands/: boxnovel.rs  mod.rs
src/utils/: boxnovel_fetcher.rs  mod.rs
