[package]
name = "feed-bot"
version = "0.1.0"
authors = ["hackermanangus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0-rc.0", features = ["native_tls_backend"]}
env_logger = "0.6"
log = "0.4.11"
tokio = "0.2.22"
dotenv = "0.15.0"
sqlx = { version = "0.3.5", features = [ "sqlite" ] }
reqwest = "0.10.7"
soup = "0.5.0"
regex = "1.3.9"
openssl = { version = "*", optional = true }

[target.'cfg(linux)'.dependencies.openssl]
version = "0.10"
features = ["vendored"]